content/en/examples/validatingadmissionpolicy/basic-example-binding.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicyBinding",
  metadata: {
    name: "demo-binding-test.example.com",
  },
  spec: {
    policyName: "demo-policy.example.com",
    validationActions: [
      "Deny",
    ],
    matchResources: {
      namespaceSelector: {
        matchLabels: {
          environment: "test",
        },
      },
    },
  },
}
