content/en/examples/validatingadmissionpolicy/basic-example-policy.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicy",
  metadata: {
    name: "demo-policy.example.com",
  },
  spec: {
    failurePolicy: "Fail",
    matchConstraints: {
      resourceRules: [{
        apiGroups: [
          "apps",
        ],
        apiVersions: [
          "v1",
        ],
        operations: [
          "CREATE",
          "UPDATE",
        ],
        resources: [
          "deployments",
        ],
      }],
    },
    validations: [{
      expression: "object.spec.replicas <= 5",
    }],
  },
}
