content/en/examples/validatingadmissionpolicy/binding-with-param-prod.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicyBinding",
  metadata: {
    name: "replicalimit-binding-nontest",
  },
  spec: {
    policyName: "replicalimit-policy.example.com",
    validationActions: [
      "Deny",
    ],
    paramRef: {
      name: "replica-limit-prod.example.com",
      namespace: "default",
      parameterNotFoundAction: "Deny",
    },
    matchResources: {
      namespaceSelector: {
        matchExpressions: [{
          key: "environment",
          operator: "NotIn",
          values: [
            "test",
          ],
        }],
      },
    },
  },
}
