content/en/examples/validatingadmissionpolicy/binding-with-param.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicyBinding",
  metadata: {
    name: "replicalimit-binding-test.example.com",
  },
  spec: {
    policyName: "replicalimit-policy.example.com",
    validationActions: [
      "Deny",
    ],
    paramRef: {
      name: "replica-limit-test.example.com",
      namespace: "default",
      parameterNotFoundAction: "Deny",
    },
    matchResources: {
      namespaceSelector: {
        matchLabels: {
          environment: "test",
        },
      },
    },
  },
}
