content/en/examples/validatingadmissionpolicy/failure-policy-ignore.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicy",
  spec: {
    # specification goes here
  },
  failurePolicy: "Ignore", # The default is "Fail"
  validations: [{
    expression: "object.spec.xyz == params.x",
  }],
}
