content/en/examples/validatingadmissionpolicy/policy-with-param.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicy",
  metadata: {
    name: "replicalimit-policy.example.com",
  },
  spec: {
    failurePolicy: "Fail",
    paramKind: {
      apiVersion: "rules.example.com/v1",
      kind: "ReplicaLimit",
    },
    matchConstraints: {
      resourceRules: [{
        apiGroups: [
          "apps",
        ],
        apiVersions: [
          "v1",
        ],
        operations: [
          "CREATE",
          "UPDATE",
        ],
        resources: [
          "deployments",
        ],
      }],
    },
    validations: [{
      expression: "object.spec.replicas <= params.maxReplicas",
      reason: "Invalid",
    }],
  },
}
