content/en/examples/validatingadmissionpolicy/typechecking.yaml
---
{
  apiVersion: "admissionregistration.k8s.io/v1",
  kind: "ValidatingAdmissionPolicy",
  metadata: {
    name: "deploy-replica-policy.example.com",
  },
  spec: {
    matchConstraints: {
      resourceRules: [{
        apiGroups: [
          "apps",
        ],
        apiVersions: [
          "v1",
        ],
        operations: [
          "CREATE",
          "UPDATE",
        ],
        resources: [
          "deployments",
        ],
      }],
    },
    validations: [{
      expression: "object.replicas > 1", # should be "object.spec.replicas > 1"
      message: "must be replicated",
      reason: "Invalid",
    }],
  },
}
